# sonic-adventure-sky-chase-skip

./: .gitignore  CMakeLists.txt  SASkyChaseSkip.sln  SASkyChaseSkip.vcxproj  main.cpp
resources/SADXModManager_mod/: configschema.xml  mod.ini
src/: main.cpp
